--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "js-yaml": "^4.1.1",
+    "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "pm2": "^6.0.14",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "recharts": "^3.5.1",
+    "sweetalert2": "^11.26.4",
+    "swr": "^2.3.7",
+    "systeminformation": "^5.27.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/systeminformation": "^3.23.1",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
