--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie": "^1.1.1",
+    "jose": "^6.1.3",
     "js-yaml": "^4.1.1",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.556.0",
+    "mysql2": "^3.15.3",
     "next": "16.0.7",
     "pm2": "^6.0.14",
     "react": "19.2.0",
@@ -22,7 +27,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie": "^0.6.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -30,6 +38,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
