--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie": "^1.1.1",
+    "dotenv": "^17.2.3",
+    "env": "^0.0.2",
     "jose": "^6.1.3",
     "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.3",
