--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3555",
+    "dev": "ts-node --project tsconfig.server.json server.ts",
     "build": "next build",
-    "start": "next start -p 3555",
+    "start": "NODE_ENV=production ts-node --project tsconfig.server.json server.ts",
     "lint": "eslint"
   },
   "dependencies": {
@@ -19,13 +19,19 @@
     "lucide-react": "^0.556.0",
     "mysql2": "^3.15.3",
     "next": "16.0.7",
+    "node-pty": "^1.0.0",
     "pm2": "^6.0.14",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.5.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.26.4",
     "swr": "^2.3.7",
-    "systeminformation": "^5.27.11"
+    "systeminformation": "^5.27.11",
+    "ts-node": "^10.9.2",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
